# github-gitlab-codepipeline

./: .actrc  .asdfrc  .env.localstack  .gitignore  .gitlab-ci-local.yml  .gitlab-ci.yml  .tool-versions  Dockerfile.fastapi  Makefile  Makefile.cicd-comparison  Makefile.localstack  README.md  appspec-ec2-github.yml  appspec-ec2-gitlab.yml  appspec-ec2.yml  appspec-ecs-github.yml  appspec-gitlab.yml  appspec.yml  docker-compose.localstack.yml  local-test-report.md  pyproject.toml  pytest.ini  samconfig.toml  template-codepipeline.yaml  template-github.yaml  template-gitlab.yaml  trivy-config.yaml
.github/: act-runner.yml  dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci-local.yml  ci.yml  codeql.yml  integration-test.yml
.gitlab-runner/: Makefile  config.toml  docker-compose.yml
.kiro/settings/: mcp.json
.kiro/steering/: 1-product-overview.md  2-technology-stack.md  3-implementation-guide.md  4-aws-guide.md  4-wbs.md
cdk/: .gitignore  README.md  app.d.ts  app.js  app.ts  package-lock.json  package.json  parameters.ts.example
cicd/: codepipeline.yaml  laravel.yml
cicd/buildspecs/: lint.yml  prepare.yml  sam_deploy.yml  sast.yml  unit_test.yml
cicd/ec2_sample/: 2_codepipeline.yaml
cicd/scripts/: codeguru.sh  common_env.sh  common_install.sh  run_codeguru_security.sh
codepipeline/: codepipeline.yaml
codepipeline/buildspecs/: cache.yml  common_env.sh  common_install.sh  common_install_macos.sh  common_pre_build.sh  common_pre_build_macos.sh  deploy-ec2.yml  deploy-ecs.yml  deploy-lambda.yml  lint.yml  prepare.yml  run_codeguru_security.sh  sam_deploy.yml  sast.yml  sca.yml  unit_test.yml  unittest.yml
docs/: cicd-setup-guide.md  cloudwatch-logging-setup.md  codepipeline-setup.md  comparison-analysis-guide.md  github-actions-local-testing.md  github-actions-oidc-setup.md  github-actions-setup.md  gitlab-ci-local-testing.md  gitlab-ci-setup.md  local-development-setup.md  local-testing-guide.md  troubleshooting-guide.md
scripts/: after_allow_traffic.sh  after_install.sh  analyze-cicd-configs.py  application_start.sh  application_stop.sh  before_allow_traffic.sh  before_install.sh  cicd-performance-comparison.py  cloudwatch-log-analysis.sh  collect-cicd-metrics.py  local-test-integration.sh  localstack-helpers.sh  localstack-init.sh  run-integration-tests.sh  run-tests-local.sh  run_codeguru_security.sh  test-cloudwatch-logs.sh  test-codepipeline-local.sh  test-github-actions-local.sh  test-github-actions.sh  test-gitlab-ci-local.sh  test-gitlab-ci.sh
(+46 files in other folders)
